@@ -52,16 +52,16 @@ function AddRegExpCases( re, s, g, i, m, l ) {
 
     // properties
 
-    AddTestCase( re + ".source",
-                 s,
-                 re.source );
-
 /*
  * http://bugzilla.mozilla.org/show_bug.cgi?id=225550 changed
  * the behavior of toString() and toSource() on empty regexps.
  * So branch if |s| is the empty string -
  */
     var S = s? s : '(?:)';
+
+    AddTestCase( re + ".source",
+                 S,
+                 re.source );
 
     AddTestCase( re + ".toString()",
                  "/" + S +"/" + (g?"g":"") + (i?"i":"") +(m?"m":""),
